-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
Win 8.1, Android 4.2.2
-
-
4cb0e9650599cb9b94651bb4f9e62bfdafde1ec4
Since 5.3 Beta1, the QMessageBox Dialog does not create a paragraph anymore when "\n" is used.
QMessageBox msgBox;
msgBox.setText("A" + "\nB" + "\nC");
msgBox.exec();
Only would show "A B C". Spaces instead of paragraphs.
- relates to
-
QTBUG-37936 QMessageDialogOptions needs text format
-
- Closed
-