Android: Convert plain text to html text for native dialogs.

Task-number: QTBUG-37824

Change-Id: I380b41d300b198b6cf3060bbecb5b98e0190b69a
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 4cb0e9650599cb9b94651bb4f9e62bfdafde1ec4 https://github.com/qt/qtbase/commit/4cb0e9650599cb9b94651bb4f9e62bfdafde1ec4